# binkflix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md
.claude/: launch.json
assets/: player.js  style.css  tokens.css
assets/static/: player-stub.js  player.js
migrations/: 0001_init.sql  0002_stream_plan.sql  0003_watch_history.sql  0004_sort_title.sql  0005_added_at.sql  0006_trickplay.sql  0007_trickplay_padding.sql  0008_media_preferences.sql  0009_analytics.sql  0010_scan_timing_source.sql  0011_show_artwork.sql  0012_users.sql  0013_cw_dismissed.sql  0013_scan_version.sql  0014_soft_delete.sql  0016_extended_metadata.sql  0017_per_asset_scan_versions.sql  0018_user_settings.sql  0019_service_keypair.sql  0020_playback_telemetry.sql  0021_content_signature.sql  0022_rename_probe_json.sql  0023_build_id.sql  0024_resync_snap.sql  0025_sync_state.sql  0026_markers.sql
src/: app.rs  client_api.rs  main.rs  syncplay_client.rs  types.rs  video_player.rs
src/server/: analytics.rs  api.rs  auth.rs  bastion_registration.rs  db.rs  error.rs  filename.rs  hls.rs  markers.rs  media_info.rs  mod.rs  nfo.rs  preferences.rs  remux.rs  scanner.rs  subtitles.rs  syncplay.rs  thumbnails.rs  tmp.rs  trickplay.rs  user_settings.rs  users.rs  watch.rs
src/server/cli/: cleanup.rs  import_jellyfin.rs  mod.rs
src/server/hls/: cache.rs  hwenc.rs  mod.rs  plan.rs  playlist.rs  producer.rs
tools/import-jellyfin/: Cargo.toml
tools/import-jellyfin/src/: main.rs
