[workspace]
members = [".", "tools/import-jellyfin"]

[package]
name = "binkflix"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
futures = "0.3"

# --- web-only (wasm client) ---
gloo-net = { version = "0.6", features = ["http", "websocket"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "HtmlMediaElement", "HtmlVideoElement",
    "Window", "Location", "Document", "Element", "EventTarget", "Event",
] }
tracing-wasm = { version = "0.2", optional = true }
tracing = { version = "0.1", optional = true }

# --- server-only (native) ---
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", features = ["ws", "macros"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "set-header"], optional = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"], optional = true }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }
walkdir = { version = "2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
dashmap = { version = "6", optional = true }
dotenvy = { version = "0.15", optional = true }
bytes = { version = "1", optional = true }
# Used in `pre_exec` for ffmpeg children: setpgid + (Linux) PR_SET_PDEATHSIG
# so children die when the binkflix process does. Pulled in transitively
# anyway via tokio; declaring it directly keeps the unsafe block honest.
libc = { version = "0.2", optional = true }
# Scratch dir for batched subtitle extraction (one ffmpeg, N outputs).
tempfile = { version = "3", optional = true }

# bastion auth
jsonwebtoken = { version = "9", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
axum-extra = { version = "0.10", features = ["cookie"], optional = true }

[features]
default = []
web    = [
    "dioxus/web",
    "dep:gloo-net", "dep:gloo-timers",
    "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys",
    "dep:web-sys",
    "dep:tracing-wasm", "dep:tracing",
]
server = [
    "dioxus/server",
    "dep:tokio", "dep:axum", "dep:tower", "dep:tower-http",
    "dep:sqlx", "dep:quick-xml", "dep:walkdir",
    "dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender",
    "dep:chrono", "dep:uuid", "dep:dashmap", "dep:dotenvy",
    "dep:bytes", "dep:libc", "dep:tempfile",
    "dep:jsonwebtoken", "dep:reqwest", "dep:axum-extra",
]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
